# Magnetics

./: .gitignore  CLAUDE.md  README.md  gui.md  pyproject.toml  run.sh
.claude/: launch.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
analysis/: pyproject.toml
analysis/OMFIT-magnetics/: OMFITsave.txt  SettingsNamelist.txt  help.rst
analysis/OMFIT-magnetics/GUIS/: coil_gui.py  magnetics_gui.py  main_gui.py  slcontour_gui.py  stress_gui.py
analysis/OMFIT-magnetics/GUIS/SPECTROGRAM/: spectrogram_driver.py  spectrogram_select_n_GUI.py
analysis/OMFIT-magnetics/LIB/: OMFITlib_startup.py  spectrogram_useful_stuff.py
analysis/OMFIT-magnetics/PLOTS/: plot_magnetics_coil_modes.py  plot_magnetics_fit.py  plot_magnetics_fit_modes.py  plot_magnetics_sensors.py  plot_magnetics_signal.py  plot_magnetics_slice.py  plot_magnetics_svds.py  plot_slcontour_fit.py  plot_stress.py
analysis/OMFIT-magnetics/PLOTS/SPECTROGRAM/: plot_auto_spectrogram.py  plot_velocities_on_spectrogram.py  spectrogram_plot_bdots.py  spectrogram_plot_fft.py  spectrogram_plot_modespec.py  spectrogram_plot_modespec_actual_plots.py  spectrogram_plot_phases.py  spectrogram_plot_radial_profiles.py
analysis/OMFIT-magnetics/SCRIPTS/: fetch_magnetics.py  fit_magnetics.py  init_magnetics.py  prep_magnetics.py  restore_magnetics.py  run_coils_3D.py  run_magnetics.py  slcontour.py  stress.py
analysis/OMFIT-magnetics/SCRIPTS/SPECTROGRAM/: get_bdot_data_NSTX.py  get_bdot_info_NSTX.py  spectrogram_init.py  spectrogram_prep.py
analysis/examples/: spectrogram_174446.ipynb
analysis/magnetics-code/: README.md  example_154551.ipynb  example_magnetics.ipynb  fit.py  io_data.py  omfit_compat.py  plots.py  prep.py  run.py
analysis/magnetics-code/DATA/: README.md
analysis/magnetics-code/DATA/DIII-D/: channel_filters.txt  coil_filters.txt  diiid.txt  diiid_sensors.txt
analysis/scripts/: export_geometry.py
analysis/src/magnetics/: __init__.py  contract.py
analysis/src/magnetics/_slcontour/: __init__.py  io_data.py  plots.py  prep.py  run.py
analysis/src/magnetics/core/: __init__.py  contracts.py  geometry.py  mode_shape.py  qs_bridge.py  quasistationary.py  spectral.py
analysis/src/magnetics/data/: __init__.py  device_config.py  devices.py  diiid.py  diiid_geometry.py  h5source.py  signals.py
analysis/src/magnetics/data/device/: nstx.json
analysis/src/magnetics/service/: README.md  __init__.py  _mock_roster.py  _real_geometry.py  app.py  main.py  mock.py  nodes.py
analysis/tests/: bench_dataflow.py  conftest.py  synthetic_h5.py  test_contract.py  test_contract_shapes.py  test_device_geometry.py  test_elongation.py  test_h5source_window.py  test_make_synthetic_shot.py  test_mode_shape.py  test_nodes.py  test_spectral.py  test_spectral_chunked.py
analysis/tests/fixtures/: 174446_snippet.npz
data/: devices.py  inspect_h5.py  magnetics_signals.py  make_synthetic_shot.py  pull_shot_h5.py  remote_run.py  sshauth.py  test_magnetics_signals.py  test_mdsthin_integration.py  test_toksearch_fetch.py  toksearch_fetch.py
data/device/: diiid.json  nstx.json
docs/: CONTRACT.md  VISION.md  gui-parameters-reference.md  magnetics-code-architecture.md  quasistationary-mode-analysis.md
docs/plans/: phase1-coherence-gate.md  rotating-live-nodes.md  spectrogram-gaussian-presmooth.md
docs/qs_slcontour/: README.md  example_magnetics.ipynb
docs/research-summaries/: 01_HTPD2018.md  02_MODESPEC2012.md  03_PoloidalModeID_MODESPEC.md  04_SLCONTOUR_summary2019.md  05_SLCONTOUR_2axis2019.md  06_Slcontour_Update2023.md  07_Slcontour_I_Supp2023.md  08_Slcontour_II_2023.md  09_Slcontour_III_Update2023.md  10_Slcontour_III_Supp2023.md  11_HTPDposter2016.md  12_RSI2016_paper.md  README.md  (+1 more)
examples/: example_magnetics.ipynb  spectrogram_174446.ipynb
scripts/: export_geometry.py  import_device_geometry.py  import_diiid_eras.py
tests/: conftest.py  synthetic_shot.py  test_contract_meta.py  test_contracts.py  test_core_geometry.py  test_crucible_regressions.py  test_data_fetch_hardening.py  test_delete.py  test_device_geometry.py  test_equilibrium.py  test_export.py  test_fetch_network.py  test_hbtep_device.py  test_kstar_nodes.py  test_kstar_routing.py  test_mdsthin_integration.py  test_mode_shape.py  test_nodes.py  test_nodes_helpers.py  test_nstx_fetch_live.py  test_nstx_nodes.py  test_nstx_tree_fetch.py  test_qs_bridge.py  test_qs_pairdiff.py  test_qs_pipeline.py  test_quasistationary.py  test_service_api.py  test_signals.py  test_slcontour_fit.py  test_slcontour_geometry.py  test_spectral.py  test_toksearch_tree.py  test_toksearch_writer.py
(+127 files in other folders)
