[project]
name = "magnetics"
version = "0.1.0"
description = "Device-agnostic 3D magnetic-sensor analysis of tokamak MHD instabilities (importable library + optional service)."
readme = "README.md"
authors = [
    { name = "Matthew Pharr", email = "m.pharr@protonmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    # data-reading (Slow Rollers' shot loaders / Data layer)
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "xarray>=2026.4.0",
    "mdsthin>=1.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "scipy>=1.18.0",
]

# Web deps stay optional so the library imports cleanly for notebook users.
[project.optional-dependencies]
service = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    # notebook tooling (examples + clean notebook commits)
    "ipykernel>=7.3.0",
    "jupyter>=1.1.0",
    "nbconvert>=7.16",
    "nbstripout>=0.9.1",
    "ty>=0.0.52",
    "httpx>=0.28.1",
]

# Run the mock service:  uv run --extra service magnetics-service
[project.scripts]
magnetics-service = "magnetics.service.app:main"

[tool.ruff]
line-length = 100  # target version is inferred from requires-python

[tool.ty.src]
# The qs_* modules are the former _slcontour SLCONTOUR translation, now promoted into
# core (shim-free). They are ruff format + lint clean; the xarray-heavy `ty` pass is a
# documented follow-up (see docs/qs_slcontour/ and the retire-quasistationary plan).
exclude = [
    "src/magnetics/core/qs_fit.py",
    "src/magnetics/core/qs_prep.py",
    "src/magnetics/core/qs_io_data.py",
    "src/magnetics/core/qs_run.py",
    "src/magnetics/core/qs_plots.py",
    "src/magnetics/core/qs_device.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
