[project]
name = "magnetics"
version = "0.1.0"
description = "Device-agnostic 3D magnetic-sensor analysis of tokamak MHD instabilities (importable library + optional service)."
readme = "README.md"
authors = [
    { name = "Matthew Pharr", email = "m.pharr@protonmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "scipy>=1.15.0",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    # notebook tooling (Rapid Rotators' examples + clean notebook commits)
    "jupyter>=1.1.0",
    "nbconvert>=7.16",
    "nbstripout>=0.9.1",
]

# Run the mock service:  uv run --extra service magnetics-service
[project.scripts]
magnetics-service = "magnetics.service.app:main"

[tool.ruff]
line-length = 100  # target version is inferred from requires-python

[tool.pytest.ini_options]
testpaths = ["tests"]
