[project]
name = "magnetics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthew Pharr", email = "m.pharr@protonmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "scipy>=1.18.0",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
magnetics-service = "magnetics.service.app:main"
